@@ -81,6 +81,16 @@ case 'replace':
 		$DB->Execute('UPDATE netdevices SET location = ? WHERE id = ?', 
 				array($dev2['location'], $dev1['id']));
 
+		$DB->Execute('UPDATE netdevices SET latitude = ? WHERE id = ?', 
+				array($dev1['latitude'], $dev2['id']));
+		$DB->Execute('UPDATE netdevices SET latitude = ? WHERE id = ?', 
+				array($dev2['latitude'], $dev1['id']));
+
+		$DB->Execute('UPDATE netdevices SET longitude = ? WHERE id = ?', 
+				array($dev1['longitude'], $dev2['id']));
+		$DB->Execute('UPDATE netdevices SET longitude = ? WHERE id = ?', 
+				array($dev2['longitude'], $dev1['id']));
+
 		$LMS->NetDevDelLinks($dev1['id']);
 		$LMS->NetDevDelLinks($dev2['id']);
 
