@@ -131,6 +131,27 @@
 					<TABLE WIDTH="100%" CELLPADDING="3">
 	<TR CLASS="LIGHT">
 		<TD WIDTH="1%">
+			<IMG SRC="img/home.gif" ALT="{t}GPS coordinates:{/t}">
+		</TD>
+		<TD WIDTH="1%">
+			<B>{t}GPS latitude:{/t}</B>
+		</TD>
+		<TD WIDTH="98%">
+			<B>{t}GPS longitude:{/t}</B>
+		</TD>
+	</TR>
+	<TR CLASS="LIGHT">
+		<TD WIDTH="1%">
+		</TD>
+		<TD WIDTH="1%">
+			<INPUT ID="latitude" TYPE="text" NAME="nodeedit[latitude]" VALUE="{if $nodeinfo.latitude}{$nodeinfo.latitude}{else}{/if}" {tip text="Enter device latitude (optional)" trigger="latitude"}>
+		</TD>
+		<TD WIDTH="98%">
+			<INPUT ID="longitude" TYPE="text" NAME="nodeedit[longitude]" VALUE="{if $nodeinfo.longitude}{$nodeinfo.longitude}{else}{/if}" {tip text="Enter device longitude (optional)" trigger="longitude"}>
+		</TD>
+	</TR>
+	<TR CLASS="LIGHT">
+		<TD WIDTH="1%">
 			<IMG SRC="img/info1.gif" ALT="{t}Description:{/t}">
 		</TD>
 		<TD WIDTH="99%" COLSPAN="2">
