@@ -39,6 +39,7 @@ version ? (????-??-??):
     -----------------------------------------------------------------
   - quicksearch: fixed search for hosts when exact mac address was entered [chilan]
   - BTS#0000867: execution node_del_{before,after} hooks while deleting owner [chilan]
+  - gps coordinates support for nodes and netdevices [chilan]
 
 version 1.11.13 Dira (2011-04-07)
 
